# ChangeLog for net-nds/389-ds-base
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*389-ds-base-1.2.6_alpha4

  01 Jun 2010; <slep@gentoo.org> +389-ds-base-1.2.6_alpha4.ebuild:
  revision bump

  02 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -files/1.2.2/configure.ac.patch:
  clean old

  24 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -389-ds-base-1.2.2.ebuild:
  remove old version

  11 Mar 2010; <slep@gentoo.org> +files/1.2.6/selinux_gentoo.patch,
  +389-ds-base-1.2.6_alpha2.ebuild, +files/1.2.6/selinux_makefile.patch:
  1.2.6 alpha version


*1.2.6_a2 ( 11 Mar 2010 )

  25 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  389-ds-base-1.2.5.ebuild, +files/dirsrv-snmp.initd:
  add dirsrv-snmp init script

  15 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-ds-base-1.2.5.ebuild, metadata.xml:
  new version

*1.2.5

  15 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -389-ds-base-1.2.4.ebuild:
  drop 1.2.4 version

  06 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-ds-base-1.2.5_rc4.ebuild:
  RC4

  09 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -files/1.2.3/0001-configure.ac-genrtoo_brand.patch,
  -389-ds-base-1.2.1-r1.ebuild, -389-ds-base-1.2.3.ebuild,
  -files/1.2.4/0001-configure.ac-genrtoo_brand.patch,
  -389-ds-base-1.2.1-r2.ebuild, -389-ds-base-1.2.4.ebuild:
  delete old unstable version

  08 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -389-ds-base-1.2.5_rc1.ebuild, +389-ds-base-1.2.5_rc2.ebuild:
  add/remove release candidat. ebuild

  02 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-ds-base-1.2.5_rc1.ebuild:
  new version add - only for tesnig

  11 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  389-ds-base-1.2.4.ebuild:
  add gentoo specifik user dirsrv support

  11 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-ds-base-1.2.1-r2.ebuild:
  revision bump

  11 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  389-ds-base-1.2.4.ebuild:
  syntax fix
