@@ -4,10 +4,8 @@ AUX dirsrv-snmp.initd 613 RMD160 ef358910b5f6737e383bb7d288c29c9a09590e7b SHA1 f
 AUX dirsrv.confd 72 RMD160 d5478a77018aeb727ba72217d3e67af3dcd669c9 SHA1 006d238cd3fd31b9019a2a1e5bff250192b05a91 SHA256 62d68e8ab4b2b1342a3418e6b067a99345a2806ec1575f6d49cd6c0d1cbb17bc
 AUX dirsrv.initd 2444 RMD160 64e8e82f46f5aaf70a15051c310f12ed574e3b1b SHA1 e824770616596dd5b94925ebc5fb64f5bfc07fcb SHA256 8701b1ed7a936f374b3dd0a9ef940b8e527a3468f52f3f2b9308cfaa8ad9714e
 DIST 389-ds-base-1.2.5.tar.bz2 2791116 RMD160 7bc4af77a66f19f1ee5ea2dfe6678e0d4b09993f SHA1 40340cdf1d1816c5a6b97acfb770c1f5ad6f7f4a SHA256 564fa7fb368d6b0dacd9b237aa515a48f57ae7395f191ba17867a5506cdc0a43
-DIST 389-ds-base-1.2.6.a2.tar.bz2 2829590 RMD160 effa1563ce989a50ebfd72e5ca11ea9fccb40e3f SHA1 81b8b2d92e056f55167621fa21284eb4ec6f4291 SHA256 dce426434e455387ce59daa066da93dbaf8a3cea8fb38f16415c1932bbd4cb36
 DIST 389-ds-base-1.2.6.a4.tar.bz2 2860430 RMD160 f3d0bff0f67b173258f9202d9bdf714b38f1ffd9 SHA1 8ec64d80426a55d5c77bc576a34e8568a94f322f SHA256 beb5f3713f17f0287ddf4f8bb595568d4ee355ab2b0f9b3ffa92d4e33c4bfa8a
 EBUILD 389-ds-base-1.2.5.ebuild 2918 RMD160 c855002d65617c5a24d9721382ddb0ae64bc284e SHA1 0b2fd59fd9c3f86e512977df9f67a1884a48df47 SHA256 539f66d017f7f026b513270a99617e3282154f0b2cf09c1520404737e52def46
-EBUILD 389-ds-base-1.2.6_alpha2.ebuild 3944 RMD160 a63fe0228402b9ab65922e462e4d932deceb09e9 SHA1 c2ec37c6615ee8a8300a9e54fb34c2681c6ce717 SHA256 79e1abea1703a04d7ccfb09833c793dca2319ed4d25f7b3784f7729c30e22c96
 EBUILD 389-ds-base-1.2.6_alpha4.ebuild 3944 RMD160 a63fe0228402b9ab65922e462e4d932deceb09e9 SHA1 c2ec37c6615ee8a8300a9e54fb34c2681c6ce717 SHA256 79e1abea1703a04d7ccfb09833c793dca2319ed4d25f7b3784f7729c30e22c96
-MISC ChangeLog 3841 RMD160 4d170a3b54d443fb903fa83f81e1e19e49eaecbb SHA1 670130fa0d0e34fed1ae6905025b01ee3a0cc2f9 SHA256 6d141770d0e473cf64bb28aaf82e89125c7bff4c2b77af9eb923143336236eee
+MISC ChangeLog 3950 RMD160 d159874f6deeb52c2672a3c3866e1b5b585e5f00 SHA1 78b5a57212278c2f72648009d5dc6f6c408d776c SHA256 052dcef1fdb1cdd8bad9853db604f91680b302ea9af550b939392f6ba47d4031
 MISC metadata.xml 1184 RMD160 2a20686dd0bf46fc91567041430659699a24ab27 SHA1 a0f1e8fadfc1f0e91deab05fd4f9efba3a33e398 SHA256 222f5d5797a314c2f691dfb298d19ff85cfa61752db31a3204f84e345ab8b1f5
