@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -389-ds-base-1.2.6_alpha2.ebuild:
+  drop alfa ebuild
+
 *389-ds-base-1.2.6_alpha4
 
   01 Jun 2010; <slep@gentoo.org> +389-ds-base-1.2.6_alpha4.ebuild:
